# rekoll

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  NON_GOALS.md  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dco.yml  release.yml
benchmarks/: EFFICACY_REPORT.md  ablation_arms.py  attack_corpus.json  compare_arms.py  recall_smoke.json  run_benchmark.py  vector_scan_bench.py
benchmarks/dogfood/: RESULTS_dogfood_v1.md  questions_Trading-Logging-Automation.json  questions_jeff-app-for-iphone.json  questions_powered-by-people-website.json  questions_rekreate-ai-chat.json  run_dogfood.py
benchmarks/fixtures/: PREREGISTRATION_semantic_v1.md  RESULTS_ablation_v1.md  RESULTS_semantic_v1.md  adjudication_semantic_v1.json  gen_distractors.py  results_ablation_v1.json  results_semantic_v1.json  semantic_v1.json  verify_semantic_v1.py
docs/: DESIGN.md  DOGFOOD.md  MCP.md  PROVIDERS.md  QUICKSTART.md
docs/adr/: 0001-separate-physical-tables.md  0002-provenance-and-trust-foundational.md  0003-scope-granularity.md  0004-frozen-kind-vocabulary.md  0005-storage-adapter-contract.md  0006-content-addressed-ids.md  0007-zero-telemetry.md  0008-node-front-door-and-byo-ai.md  0009-local-embeddings-and-hybrid-retrieval.md  0010-cross-encoder-reranking.md  0011-benchmarking.md  0012-code-chunking.md  0013-injection-firewall.md  0014-memory-facade.md  0015-byo-ai-provider-layer.md  0015-embedder-mismatch-refuse-and-degrade.md  0015-ingest-trust-default.md  0016-directive-explicit-trust.md  0016-forgetting-tombstones-and-drop-order.md  0016-ingest-trust-default.md  0017-directive-explicit-trust.md  0017-input-resource-limits.md  0018-input-resource-limits.md  0018-read-path-tamper-verification.md  0019-attack-corpus-and-asr-gate.md  0019-read-path-tamper-verification.md  0020-attack-corpus-and-asr-gate.md  0020-trust-rerank-bounded-factor.md  0021-pii-redaction-opt-in.md  0021-trust-rerank-bounded-factor.md  0022-pii-redaction-opt-in.md  0022-trust-aware-upsert.md  0023-trust-aware-upsert.md  0024-embedder-mismatch-refuse-and-degrade.md  0025-forgetting-tombstones-and-drop-order.md  0026-kind-in-content-address.md  0027-ingest-filter-design.md  0028-abstain-on-weak-recall.md  0029-auto-reranker-degraded-only.md  0030-cached-exact-vector-scan.md  (+7 more)
docs/research/: adoption-backlog.md  competitor-analysis.md  field-report-2026-07-24-first-external-onboarding.md
scripts/: dogfood.py
src/rekoll/: __init__.py  __main__.py  _version.py  board.py  chunking.py  cli.py  conformance.py  consolidation.py  embedders.py  embedding.py  evaluation.py  firewall.py  ids.py  ledger.py  mcp_server.py  memory.py  model.py  reranking.py  retrieval.py
src/rekoll/adapters/: __init__.py  base.py  registry.py  sqlite.py
src/rekoll/providers/: __init__.py  _http.py  consolidation.py  gemini.py  openai_compat.py  voyage.py
tests/: conftest.py  test_abstain.py  test_adapter_effective_status.py  test_attack_corpus.py  test_battle_containment.py  test_battle_open_findings.py  test_battle_pass3.py  test_battle_piped_token_fp.py  test_battle_redos_harness.py  test_battle_robustness.py  test_benchmark_recall.py  test_benchmark_semantic.py  test_board_concurrency.py  test_board_facade.py  test_board_payload.py  test_board_storage.py  test_chunking.py  test_cli.py  test_cli_board.py  test_consolidation.py  test_docs_consistency.py  test_docs_snippets.py  test_embedder_registry.py  test_embedding.py  test_evaluation_metrics.py  test_firewall.py  test_fs_containment.py  test_health_honesty.py  test_ingest.py  test_ingest_filters.py  test_ingest_warning_containment.py  test_invariants.py  test_ledger.py  test_lexical_query_equivalence.py  test_limits.py  test_mcp_server.py  test_mcp_server_honesty.py  test_memory.py  test_model.py  test_providers_embedders.py  (+14 more)
