[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rekoll"
version = "0.0.0"
description = "Injection-hardened, storage-agnostic, private memory layer for AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Rekreate Digital" }]
keywords = ["ai", "agent", "memory", "llm", "rag", "vector-search", "privacy"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Intended Audience :: Developers",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]
embeddings = ["fastembed>=0.3"]

[project.urls]
Homepage = "https://github.com/ryankyleocampo-github/rekoll"
Source = "https://github.com/ryankyleocampo-github/rekoll"
Issues = "https://github.com/ryankyleocampo-github/rekoll/issues"

# Built-in adapter, discoverable by third parties via the same group.
[project.entry-points."rekoll.adapters"]
sqlite = "rekoll.adapters.sqlite:SQLiteAdapter"

# Built-in cloud embedders (opt-in, lazy), discoverable via the same group.
# Third parties: ship `yourname = "your_pkg:YourEmbedder"`, called as
# YourEmbedder(model_or_None, **kwargs) — see docs/PROVIDERS.md.
[project.entry-points."rekoll.embedders"]
openai = "rekoll.providers.openai_compat:OpenAICompatibleEmbedder"
gemini = "rekoll.providers.gemini:GeminiEmbedder"
voyage = "rekoll.providers.voyage:VoyageEmbedder"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
