[build-system]
requires = ["setuptools>=77"]  # >=77 for PEP 639 (SPDX license expression)
build-backend = "setuptools.build_meta"

[project]
name = "rekoll"
dynamic = ["version"]  # single-sourced from src/rekoll/_version.py
description = "Injection-hardened, storage-agnostic, private memory layer for AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Rekreate Digital" }]
keywords = ["ai", "agent", "memory", "llm", "rag", "vector-search", "privacy"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]
embeddings = ["fastembed>=0.3"]
mcp = ["mcp>=1.2"]

# Both console scripts install unconditionally. `rekoll-mcp` needs the optional
# `mcp` extra; without it, it exits with a plain-English install hint (all mcp
# imports are lazy — see rekoll/mcp_server.py).
[project.scripts]
rekoll = "rekoll.cli:main"
rekoll-mcp = "rekoll.mcp_server:main"

[project.urls]
Homepage = "https://github.com/ryankyleocampo-github/rekoll"
Source = "https://github.com/ryankyleocampo-github/rekoll"
Issues = "https://github.com/ryankyleocampo-github/rekoll/issues"

# Built-in adapter, discoverable by third parties via the same group.
[project.entry-points."rekoll.adapters"]
sqlite = "rekoll.adapters.sqlite:SQLiteAdapter"

# Built-in cloud embedders (opt-in, lazy), discoverable via the same group.
# Third parties: ship `yourname = "your_pkg:YourEmbedder"`, called as
# YourEmbedder(model_or_None, **kwargs) — see docs/PROVIDERS.md.
[project.entry-points."rekoll.embedders"]
openai = "rekoll.providers.openai_compat:OpenAICompatibleEmbedder"
gemini = "rekoll.providers.gemini:GeminiEmbedder"
voyage = "rekoll.providers.voyage:VoyageEmbedder"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rekoll = ["py.typed"]

[tool.setuptools.dynamic]
version = { attr = "rekoll._version.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
